# swagger.yaml
@@ -113,6 +113,67 @@ paths:
                 properties:
                   message:
                     type: string
+  /accounts/reset-password/{resetToken}:
+      post:
+        tags:
+          - Account
+        summary: Change user's password
+        description: ''
+        parameters:
+          - in: path
+            name: resetToken # Note the name is the same as in the path
+            required: true
+            schema:
+              type: string
+            description: request token from the email
+        requestBody:
+          required: true
+          content:
+            application/x-www-form-urlencoded:
+              schema:
+                type: object
+                properties:
+                  password:
+                    type: string
+                required:
+                  - password
+        responses:
+          '200':
+            description: Password changed successfully
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+          '400':
+            description: Password rejected. Must be at least 8 characters long.
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+          '403':
+            description: Reset token is incorrect
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+          '500':
+            description: Internal server error
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
   /accounts/auth:
     post:
       tags:
